--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,21 @@
         "php": ">=8.2",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "deepseek-php/deepseek-php-client": "^2.0.6",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.16",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": "^3.5",
+        "guzzlehttp/guzzle": "^7.10",
+        "nyholm/psr7": "^1.8",
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.3.*",
+        "symfony/http-client": "^6.4",
         "symfony/runtime": "7.3.*",
+        "symfony/twig-bundle": "7.3.*",
+        "symfony/webpack-encore-bundle": "^2.3",
         "symfony/yaml": "7.3.*"
     },
     "require-dev": {
