--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,13 @@
         "symfony/console": "7.3.*",
         "symfony/dotenv": "7.3.*",
         "symfony/flex": "^2",
+        "symfony/form": "7.3.*",
         "symfony/framework-bundle": "7.3.*",
         "symfony/http-client": "^6.4",
         "symfony/runtime": "7.3.*",
+        "symfony/security-csrf": "7.3.*",
         "symfony/twig-bundle": "7.3.*",
+        "symfony/validator": "7.3.*",
         "symfony/webpack-encore-bundle": "^2.3",
         "symfony/yaml": "7.3.*"
     },
